Fix footer link visibility on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -454,6 +454,9 @@ html.party::after {
 }
 
 #footer {
+  position: relative;
+  bottom: 0;
+  left: 0;
   font-size: 2rem;
   font-weight: bold;
   align-self: stretch;
